force-app/main/default/objects/DM_Invoice_Scheduler_Group__c/DM_Invoice_Scheduler_Group__c.object-meta.xml
<CustomObject>
    <description>Object to create grouping of invoice scheduler batches for each run of data migration.</description>
    <label>DM Invoice Scheduler Group</label>
    <nameField>
        <displayFormat>DMISG-{0000}</displayFormat>
        <label>DM Invoice Scheduler Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Invoice Scheduler Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>