force-app/main/default/objects/DM_Invoice_Scheduler_Group__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <summaryFilterItems>
        <field>DM_Temp_Invoice_Scheduler__c.Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>DM_Temp_Invoice_Scheduler__c.DM_Invoice_Scheduler_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>