force-app/main/default/objects/DM_Invoice_Scheduler_Group__c/fields/Invoice_Batch__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Batch__c</fullName>
    <description>Batch of invoice to be used for this group of data migration invoice scheduler records.</description>
    <inlineHelpText>Invoice Batch to be used for this group of data migration invoice scheduler records.</inlineHelpText>
    <label>Invoice Batch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceBatch</valueSetName>
    </valueSet>
</CustomField>