force-app/main/default/objects/DM_Invoice_Scheduler_Group__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summaryForeignKey>DM_Temp_Invoice_Scheduler__c.DM_Invoice_Scheduler_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>