force-app/main/default/objects/DM_Invoice_Scheduler_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Batch__c</columns>
    <columns>Total__c</columns>
    <columns>Queued__c</columns>
    <columns>Completed__c</columns>
    <columns>Errors__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>