force-app/main/default/objects/DM_Invoice_Scheduler_Group__c/listViews/In_Progress_Groups.listView-meta.xml
<ListView>
    <fullName>In_Progress_Groups</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Batch__c</columns>
    <columns>Total__c</columns>
    <columns>Queued__c</columns>
    <columns>Completed__c</columns>
    <columns>Errors__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Queued__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>In Progress Groups</label>
    <language>en_US</language>
</ListView>